I think it is solid start

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.ignoreWords": [
+        "calendly",
+        "ecommerce",
+        "noopener",
+        "noreferrer",
         "stratton"
     ]
 }
