--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "1",
+  "name": "iwm",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/parallax": "^9.1.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.0.0",
+    "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-calendly": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.1.2",
+    "reactstrap": "^8.9.0",
+    "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
