--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,21 @@
 {
-  "short_name": "Stratton",
-  "name": "Stratton Terrace Marketing",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "IWM-favicon-orange-border.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "IWM-favicon-orange-border.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "IWM-favicon-orange-border.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
