--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-bootstrap": "^1.5.2",
     "react-calendly": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
