--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.0",
     "emailjs-com": "^2.6.4",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-calendly": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
+    "react-progressive-image": "^0.6.0",
     "react-responsive-carousel": "^3.2.18",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
