--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,18 @@
         "btns",
         "calendly",
         "ecommerce",
+        "ge",
+        "hqbg",
+        "j",
+        "kd",
         "noopener",
         "noreferrer",
-        "stratton"
+        "r",
+        "rbp",
+        "rh",
+        "stratton",
+        "tv",
+        "user",
+        "uu"
     ]
 }
