solutions page about done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,10 @@
         "noreferrer",
         "r",
         "rbp",
+        "retarget",
         "rh",
         "stratton",
+        "touchpoints",
         "tv",
         "user",
         "uu"
