--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "retarget",
         "rh",
         "stratton",
+        "strikethrough",
         "touchpoints",
         "tv",
         "user",
