--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-calendly": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
+    "react-pricing-table": "^0.3.0",
     "react-progressive-image": "^0.6.0",
     "react-responsive-carousel": "^3.2.18",
     "react-reveal": "^1.2.2",
