--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.0",
     "emailjs-com": "^2.6.4",
+    "firebase-tools": "^9.13.1",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
