--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,12 @@
         "calendly",
         "ecommerce",
         "ge",
+        "gplus",
         "hqbg",
         "j",
         "kd",
+        "linkedin",
+        "mdbreact",
         "noopener",
         "noreferrer",
         "pinterest",
