--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emailjs-com": "^2.6.4",
     "firebase-tools": "^9.13.1",
     "framer-motion": "^4.1.17",
+    "mdbreact": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-calendly": "^2.0.0",
