--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.5.2",
     "react-calendly": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-player": "^2.9.0",
     "react-pricing-table": "^0.3.0",
     "react-progressive-image": "^0.6.0",
@@ -23,8 +24,9 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-spring": "^9.1.2",
+    "react-spring": "^9.0.0-rc.3",
     "reactstrap": "^8.9.0",
+    "styled-components": "^5.3.0",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.0.1"
   },
