--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-calendly": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-phone-number-input": "^3.1.25",
     "react-player": "^2.9.0",
     "react-pricing-table": "^0.3.0",
     "react-progressive-image": "^0.6.0",
