--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.6.1",
     "react-spring": "^9.0.0-rc.3",
     "reactstrap": "^8.9.0",
     "styled-components": "^5.3.0",
