--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.ignoreWords": [
         "Hulshof",
+        "Jsonpiwm",
         "Romig",
+        "Strattonterrace",
         "btns",
         "calendly",
         "ecommerce",
