--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.5.2",
     "react-calendly": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-icons": "^4.2.0",
     "react-phone-number-input": "^3.1.25",
     "react-player": "^2.9.0",
