one more business

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,11 @@
         "Brien",
         "Hulshof",
         "Jsonpiwm",
+        "Microblading",
+        "Nuys",
         "Romig",
         "Strattonterrace",
+        "browsjungle",
         "btns",
         "calendly",
         "ecommerce",
