--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Nuys",
         "Romig",
         "Strattonterrace",
+        "Telosis",
         "browsjungle",
         "btns",
         "calendly",
