--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "mdbreact",
         "noopener",
         "noreferrer",
+        "orservices",
         "pinterest",
         "r",
         "rbp",
