contact us button update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.ignoreWords": [
         "Brien",
+        "Hostgator",
         "Hulshof",
         "Jsonpiwm",
         "Microblading",
@@ -24,6 +25,7 @@
         "noreferrer",
         "orservices",
         "pinterest",
+        "portrayalation",
         "r",
         "rbp",
         "retarget",
