--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "babel src -d lib",
+    "test": "jest",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
