--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Brien",
         "Hostgator",
         "Hulshof",
+        "Hulu",
         "Jsonpiwm",
         "Microblading",
         "Nuys",
