--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Romig",
         "Strattonterrace",
         "Telosis",
+        "browserslist",
         "browsjungle",
         "btns",
         "calendly",
@@ -22,6 +23,7 @@
         "j",
         "kd",
         "linkedin",
+        "marketin",
         "mdbreact",
         "noopener",
         "noreferrer",
