--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Jsonpiwm",
         "Microblading",
         "Nuys",
+        "Remollo",
         "Romig",
         "Strattonterrace",
         "Telosis",
