--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "rh",
         "stratton",
         "strikethrough",
+        "tiktok",
         "touchpoints",
         "tv",
         "user",
