--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/helper-compilation-targets": "^7.16.3",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@react-spring/parallax": "^9.1.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -35,14 +36,11 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-
-    "start": "react-scripts start", 
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test", 
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
-
   "eslintConfig": {
     "extends": [
       "react-app",
