--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
   },
   "scripts": {
 
-    "start": "react-scripts start", 
-    "build": "react-scripts build",
-    "test": "react-scripts test", 
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
+
 
 
   "eslintConfig": {
