--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Hulshof",
         "Hulu",
         "Jsonpiwm",
+        "Mehler",
         "Microblading",
         "Nuys",
         "Remollo",
@@ -29,6 +30,7 @@
         "noopener",
         "noreferrer",
         "orservices",
+        "photoshop",
         "pinterest",
         "portrayalation",
         "r",
